# mai-labs

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  Лабораторная_работа_1.ipynb
data/: id_table.csv  metro.csv
lab1/: README.md  metro_data.py  Лабораторная_работа_1.ipynb
lab1/data/: preferences.csv
lab2/: README.md  visualize.py  vk_api_storage.py  vk_connections.gpickle
lab2/data/: id_vk_111.csv
lab3/: README.md  main.py  schelling_model.py  utils.py
lab4/: README.md  circle.py  example.txt  main.py  smallest_enclosing_distance.py  visualize.py
lab4/algorithms/: ritter_bounding_sphere.py  smallest_enclosing_distance.py
lab5/: README.md  id3.py
lab5/data/: group.csv
lab6/: README.md  main.py  node.py
lab7/: README.md  Лабораторная работа 7.ipynb
